--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/PortafolioHector.github.io/IMAGES/mifoto.png" style="color:rgb(0, 0, 0)"; ="200px">
+            <img src="PortafolioHector.github.io/IMAGES/mifoto.png" style="color:rgb(0, 0, 0)"; ="200px">
 
         </div>
 
