--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           <i id="left" class="bx bx-chevron-left"></i>
           <div class="carousel">
             <div class="card row">
-              <img src="PortafolioHector.github.io/IMAGES/1.png" alt="Project 1">
+              <img src="https://i.imgur.com/BVEhidl.png" alt="Project 1">
               <div class="layer">
                 <h5>Entrepreneurship Center Platform</h5>
                 <p>It is a platform for entrepreneurs/partners with a login and interactive two-view page.</p>
@@ -348,7 +348,7 @@
               </div>
             </div>
             <div class="card row">
-              <img src="PortafolioHector.github.io/IMAGES/2.png" alt="Project 2">
+              <img src="https://i.imgur.com/zuQDB1g.png" alt="Project 2">
               <div class="layer">
                 <h5>File Manager</h5>
                 <p>The previous page integrates various functionalities that can be tested, such as this file manager where you can share files with other users, similar to a social network.</p>
@@ -358,7 +358,7 @@
               </div>
             </div>
             <div class="card row">
-              <img src="PortafolioHector.github.io/IMAGES/3.png" alt="Project 3">
+              <img src="https://i.imgur.com/E3ykC86.png" alt="Project 3">
               <div class="layer">
                 <h5>Real-time chat</h5>
                 <p>Additionally, it also integrates a real-time chat where you can communicate with registered users.</p>
@@ -368,7 +368,7 @@
               </div>
             </div>
             <div class="card row">
-              <img src="PortafolioHector.github.io/IMAGES/java.png" alt="Project 4">
+              <img src="https://i.imgur.com/Z4wiBBZ.png" alt="Project 4">
               <div class="layer">
                 <h5>java adaptative App</h5>
                 <p>Adaptive application for small businesses, in this case, for a beauty salon, but it can be customized. It includes product registration, sales management, and more.</p>
@@ -378,7 +378,7 @@
               </div>
             </div>
             <div class="card row">
-              <img src="PortafolioHector.github.io/IMAGES/salon.png" alt="Project 5">
+              <img src="https://i.imgur.com/dLtb0ux.png" alt="Project 5">
               <div class="layer">
                 <h5>Admin Page for Beauty Salon Demo</h5>
                 <p>An Application for Service Registration, Payment Processing, Sales Tracking, Appointment Management, Designed to be User-Friendly.</p>
@@ -388,7 +388,7 @@
               </div>
             </div>
             <div class="card row">
-              <img src="PortafolioHector.github.io/IMAGES/9.png" alt="Project 6">
+              <img src="https://i.imgur.com/2UM2K1Z.png" alt="Project 6">
               <div class="layer">
                 <h5>Demo Gym Admin Page</h5>
                 <p>This is a demo of a page designed for managing a gym. It can be customized to suit other businesses and industries. Please note that this demo.</p>
@@ -491,7 +491,7 @@
         </form>
         <div class="container4">
             <h2 class="object" data-value="3"><br><span></span></h2>
-            <img src="PortafolioHector.github.io/images/111.png" class="object" data-value="-2" alt="">
+            <img src="https://i.imgur.com/dpsGKC1.png" class="object" data-value="-2" alt="">
 
 
 
