--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
             <script>
                 const button = document.querySelector(".button");
-                const downloadLink = "/curriculum.pdf";
+                const downloadLink = "https://drive.google.com/file/d/1WhnesAQae7vJ9xus0cwfe61Wg0OQnCZF/view?usp=sharing";
 
                 button.addEventListener("click", () => {
                     button.classList.add("active");
@@ -432,7 +432,7 @@
                     </div>
                     <p></p>
                     <div class="bottom">
-                        <a href="/Certificate.pdf">Read more</a>
+                        <a href="https://drive.google.com/file/d/1DR26_luHhSKCan7HGx5BIrg1iYlYeOCK/view?usp=sharing">Read more</a>
 
                     </div>
 
