--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         });
     </script>
     <section id="hom" class="home">
+    <a id="scroll-btn" href="#section-2"></a>
         <div class="home-content">
             <h3> Hello, I am</h3>
             <h3> Hector Eduardo Arana</h3>
