Update index.html section-2

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
     </section>
 
-    <section class="about" id="about">
+    <section class="about" id="section-2">
         <div class="about-img">
             <img src="https://i.imgur.com/V5Iq9RG.png" style="color:rgb(0, 0, 0)"; ="200px">
 
