Update index.html mariano

--- a/index.html
+++ b/index.html
@@ -411,16 +411,16 @@
                 <a href="#" class="scroll-icon"><i class='bx bxs-briefcase'></i></a>
             </div>
             <div class="row row-1">
-                <section>
+               <section>
                     <i class='icon bx bxs-graduation'></i>
                     <div class="details">
                         <span class="title">completed the curriculum</span>
                         <span>29th Nov 2022</span>
                     </div>
                     <p>I have successfully completed the curriculum for a Systems Engineering degree at Universidad
-                        Mariano Gálvez in Guatemala.</p>
+                        Mariano Gálvez in Guatemala For privacy reasons, some information has been censored, but I can provide the complete documentation to the company upon request..</p>
                     <div class="bottom">
-
+                        <a href="https://drive.google.com/file/d/1qgScRuNZxP_uken6lybvgEYvv8dHsCWR/view?usp=sharing">Read more</a>
                     </div>
                 </section>
             </div>
