--- a/index.html
+++ b/index.html
@@ -471,6 +471,26 @@
                     </div>
                 </section>
             </div>
+        <div class="row row-1">
+                <section>
+                    <i class='icon bx bx-certification'></i>
+                    <div class="details">
+                        <span class="title">Master's in JavaScript: Learn JS, jQuery, Angular, NodeJS.</span>
+                        <span>10th Ago 2023</span>
+                    </div>
+                    <p>Completed an intensive Master's course in JavaScript: Learn JS, jQuery, Angular, NodeJS..</p>
+                
+                <p></p>
+                <div class="bottom">
+                    <a href="https://drive.google.com/file/d/1BDGU7UFihVL6DlBhHCDlXoi1askhKruM/view?usp=sharing">Read more</a>
+
+                </div>
+
+                <div class="bottom">
+
+                </div>
+            </section>
+            </div>
         </div>
         </div>
 
